--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
     </section>
 
     <!-- Info Transicion -->
-    <section class="container-fluid mt-5 px-5">
-        <div class="row m-5">
-            <div class="col-3  col-lg-3 d-flex justify-content-center">
+    <section class="container-fluid mt-5">
+        <div class="row px-3">
+            <div class="col-4  col-lg-3 d-flex justify-content-center">
                 <p class="tipoDeFuente tituloP">
                     <i class="bi bi-arrow-right-circle-fill me-2"></i>
                     Trusted by the Best
@@ -133,27 +133,27 @@
 
 
     <!-- Info Transicion -->
-    <section class="container-fluid mt-5 px-5">
-        <div class="row m-5">
-            <div class="col-3  col-lg-3 d-flex justify-content-center">
+    <section class="container-fluid mt-3 pe-3">
+        <div class="row mb-2">
+            <div class="col-4 col-lg-3 d-flex justify-content-center">
                 <p class="tipoDeFuente tituloP">
-                    <i class="bi bi-arrow-right-circle-fill me-2"></i>
+                    <i class="bi bi-arrow-right-circle-fill "></i>
                     Case Studies
                 </p>
             </div>
             <div class="col-12 col-lg-9">
                 <div class="contianer-fluid">
                     <div class="row">
-                        <div class="col-9 d-flex align-items-center justify-content-start tipoDeFuente tituloF"> Work.
+                        <div class="col-7 col-md-9 d-flex align-items-center justify-content-start tipoDeFuente tituloF"> Work.
                         </div>
-                        <div class="col-3 d-flex align-items-end justify-content-end tipoDeFuente tituloP text-end">We
+                        <div class="col-5 col-md-3 d-flex align-items-end justify-content-end tipoDeFuente tituloP text-end">We
                             build spatial computing apps
                             that deliver business impact.</div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container-fluid pe-5 d-flex justify-content-end">
+        <div class="container-fluid pe-3 d-flex justify-content-end">
             <a href="#" class="btn btn-dark rounded-pill">
                 View more work
             </a>
@@ -198,7 +198,7 @@
     <!-- Info Transicion -->
     <section class="container-fluid m-5">
         <div class="row">
-            <div class="col-3  col-lg-3 d-flex justify-content-center">
+            <div class="col-4  col-lg-3 d-flex justify-content-center">
                 <p class="tipoDeFuente tituloP">
                     <i class="bi bi-arrow-right-circle-fill me-2 bg"></i>
                     Why Choose US
@@ -260,8 +260,8 @@
 
 
     <!-- seccion de contacto -->
-    <section class="container-fluid px-5 mt-5">
-        <section class="container-fluid bg-dark text-light shadow border-4 ">
+    <section class="container-fluid mt-5">
+        <section class="container-fluid bg-dark text-light shadow border-4 border border-primary p-3">
             <div class="row justify-content-center align-items-center ">
                 <!-- Columna izquierda: Formulario -->
                 <div class="col-md-5">
@@ -311,9 +311,9 @@
     </section>
 
 
-    <section class="container-fluid my-5 px-5 border border-start">
+    <section class="container-fluid my-5 px-4">
         <div class="row border shadow rounded-5 border border-primary">
-            <div class="col-3 d-flex align-items-start flex-column mt-5 justify-content-center ps-5">
+            <div class="col-3 d-flex align-items-start flex-column mt-5 justify-content-center ps-2">
                 <h2 class="tipoDeFuente tituloS ">Social.</h2>
                 <button type="submit" class="btn btn-outline-primary"> <i class="bi bi-linkedin"></i> LinkedIn</button>
             </div>
