--- a/index.html
+++ b/index.html
@@ -42,12 +42,19 @@
     </nav>
 
     <!-- barra inferior efecto borroso
-    <div class="blur-bottom"></div>
     -->
+    <div class="blur-bottom"></div>
+
 
     <!-- Home -->
     <section class="home">
-        <div class="container-fluid contenido-home  h-100 px-5 py-5">
+        
+        <video autoplay muted loop playsinline class="bg-video">
+            <source src="./img/mainfondo.mp4" type="video/mp4">
+            Tu navegador no soporta video en HTML5.
+        </video>
+        <!-- Capa de contenido -->
+        <div class="container-fluid contenido-home h-100 px-5 py-5">
             <div class="row h-75 align-items-center px-5">
                 <div class="col">
                     <h1 class="tipoDeFuente tituloF">CoderHub</h1>
@@ -56,8 +63,10 @@
             </div>
             <div class="row h-25 px-5 pb-5">
                 <div class="d-flex justify-content-between align-items-center">
-                    <p class="tipoDeFuente tituloP">Transforming bold ideas into spatial computing apps.</p>
-                    <a href="#">a</a>
+                    <p class="tipoDeFuente tituloP">
+                        Transforming bold ideas into spatial computing apps.
+                    </p>
+                    <a href="#">[]</a>
                 </div>
             </div>
         </div>
@@ -84,56 +93,40 @@
     </section>
 
 
-    <!-- Carrusel de empresas -->
-    <section class="container" id="marcas">
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
+    <div class="container-fluid mt-5 px-5">
+        <div class="row g-5 d-flex justify-content-center">
+            <div class="col-6 col-lg-3 col-xl-2">
+                <img src="./img/al1.png" alt="al1" class="img-fluid saltImg rounded-5">
             </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="./img/logoMicro.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
-                    </div>
-                </div>
-                <div class="carousel-item" data-bs-interval="2000">
-                    <img src="./img/meta.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="./img/medronic.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
-                    </div>
-                </div>
+            <div class="col-6 col-lg-3 col-xl-2">
+                <img src="./img/al2.png" alt="al1" class="img-fluid saltImg rounded-5">
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-    </section>
+            <div class="col-6 col-lg-3 col-xl-2" >
+                <img src="./img/al3.png" alt="al1" class="img-fluid saltImg rounded-5 ">
+            </div>
 
+            <div class="col-6 col-lg-3 col-xl-2 animate-on-scroll">
+                <img src="./img/al4.png" alt="al1" class="img-fluid saltImg rounded-5 ">
+            </div>
+
+            <div class="col-6 col-lg-3 col-xl-2">
+                <img src="./img/al5.png" alt="al1" class="img-fluid saltImg rounded-5">
+            </div>
+            <div class="col-6 col-lg-3 col-xl-2">
+                <img src="./img/ale6.png" alt="al1" class="img-fluid saltImg rounded-5">
+            </div>
+            <div class="col-6 col-lg-3 col-xl-2">
+                <img src="./img/al7.png" alt="al1" class="img-fluid saltImg rounded-5">
+            </div>
+            <div class="col-6 col-lg-3 col-xl-2">
+                <img src="./img/ale8.png" alt="al1" class="img-fluid saltImg rounded-5">
+            </div>
+
+        </div>
+    </div>
 
     <!-- Info Transicion -->
-    <section class="container-fluid mt-3 pe-3">
+    <section class="container-fluid mt-5 pe-3">
         <div class="row mb-2">
             <div class="col-4 col-lg-3 d-flex justify-content-center">
                 <p class="tipoDeFuente tituloP">
@@ -144,9 +137,13 @@
             <div class="col-12 col-lg-9">
                 <div class="contianer-fluid">
                     <div class="row">
-                        <div class="col-7 col-md-9 d-flex align-items-center justify-content-start tipoDeFuente tituloF"> Work.
+                        <div
+                            class="col-7 col-md-9 d-flex align-items-center justify-content-start tipoDeFuente tituloF">
+                            Work.
                         </div>
-                        <div class="col-5 col-md-3 d-flex align-items-end justify-content-end tipoDeFuente tituloP text-end">We
+                        <div
+                            class="col-5 col-md-3 d-flex align-items-end justify-content-end tipoDeFuente tituloP text-end">
+                            We
                             build spatial computing apps
                             that deliver business impact.</div>
                     </div>
