--- a/html/about.html
+++ b/html/about.html
@@ -16,6 +16,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+
+
 </head>
 
 <body>
@@ -35,15 +38,17 @@
 
     <section class="container-fluid" style="height: 75vh;">
         <div class="row h-100 border border-success">
-            <div class="col-lg-3 d-flex align-items-center justify-content-center pe-5">
+            <div class="col-lg-3 d-flex align-items-center justify-content-center pe-5 tipoDeFuente tituloP">
+                <i class="bi bi-arrow-right-circle-fill me-3"></i>
                 about
             </div>
             <div class="col-12 col-lg-9 d-flex align-items-center">
                 <div class="container me-5">
                     <div class="row">
                         <div class="col-10">
-                            <h1>We transform bold ideas into spatial computing apps</h1>
-                            <p>Since 2016, Treeview has partnered to deliver world-class virtual and augmented reality
+                            <h1 class="tipoDeFuente tituloS">We transform bold ideas into spatial computing apps</h1>
+                            <p class="tipoDeFuente tituloP">Since 2016, Treeview has partnered to deliver world-class
+                                virtual and augmented reality
                                 (AR/VR) apps for Microsoft, Meta, Medtronic, ULTA Beauty, Daiichi Sankyo, Transfr, the
                                 University of Alberta, and NEOM.</p>
                         </div>
@@ -54,29 +59,30 @@
     </section>
 
     <!-- Seccion de servicios -->
-    <section class="services-section mx-2 border border-success">
+    <section class="services-section mx-2 ">
 
-        <div class="container-fluid px-1" style="height: 120vh;">
+        <div class="container-fluid px-1" style="min-height: 90vh;">
 
-            <div class="row h-25 ">
-                <div class="col-12 col-lg-3 order-2 order-lg-1 d-flex justify-content-center">
+            <div class="row my-5">
+                <div class="col-12 col-lg-3 order-2 order-lg-1 d-flex justify-content-center tipoDeFuente tituloP">
+                    <i class="bi bi-circle-fill text-white me-3"></i>
                     What we do
                 </div>
                 <!-- Columna 2 -->
                 <div class="col-12 col-lg-9 order-1 order-lg-2 d-flex justify-content-center align-items-end pb-3">
-                    <h2>Services.</h2>
+                    <h2 class="tipoDeFuente tituloSF">Services.</h2>
                 </div>
             </div>
 
-            <div class="row accordion-container h-75 d-flex justify-content-center align-items-center ">
-                <div class="accordion custom-accordion w-100">
+            <div class="row accordion-container d-flex justify-content-center align-items-center mt-5 p-2">
+                <div class="accordion custom-accordion">
 
                     <!-- Spatial Product Design -->
                     <div class="accordion-item">
                         <h2 class="accordion-header">
-                            <button class="accordion-button collapsed " type="button" data-bs-toggle="collapse"
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                                <span>(001)</span>
+                                <span>(001) </span>
                                 Spatial Product Design
                             </button>
                         </h2>
@@ -165,13 +171,15 @@
 
 
     <!-- Seccion de resenias -->
-    <section class="container-fluid mt-5" style="height: 50vh;">
-        <div class="row h-100 ">
-            <div class="col-lg-3 d-flex align-items-center justify-content-center pe-5">
+    <section class="container-fluid mt-5">
+        <div class="row">
+            <div class="col-lg-3 d-flex align-items-center justify-content-center pe-5 tipoDeFuente titulop">
+                <i class="bi bi-arrow-right-circle-fill me-3"></i>
                 What Our Clients Say
             </div>
             <div class="col-12 col-lg-9 h-100">
-                <div class="container me-5 h-100 d-flex align-items-end justify-content-center pb-5">
+                <div
+                    class="container me-5 h-100 d-flex align-items-end justify-content-center pb-5 tipoDeFuente tituloF">
                     <div class="row">
                         <div class="col-10">
                             Client
@@ -185,7 +193,7 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-10 col-lg-3 col-md-6 mb-4">
+            <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card testimonial-card shadow-sm h-100 border-start border-5 border-primary">
                     <div class="card-body p-4">
                         <div class="d-flex align-items-center mb-3">
@@ -256,15 +264,17 @@
     </div>
 
     <!-- Meet the teeam -->
-    <section class="container-fluid mt-5" style="height: 30vh;">
-        <div class="row h-100 ">
-            <div class="col-lg-3 d-flex align-items-center justify-content-center pe-5">
+    <section class="container-fluid my-5 d-flex g-5 py-5">
+        <div class="row">
+            <div class="col-lg-3 d-flex align-items-center py-3 tipoDeFuente tituloP ">
+                <i class="bi bi-arrow-right-circle-fill me-2"></i>
                 Meet the Team
             </div>
-            <div class="col-12 col-lg-9 h-100">
-                <div class="container me-5 h-100 d-flex align-items-end justify-content-center pb-5">
+            <div class="col-12 col-lg-9 text-end py-3">
+                <div
+                    class="container me-5 h-100 d-flex align-items-end justify-content-center pb-3 tipoDeFuente tituloS">
                     <div class="row">
-                        <div class="col-10">
+                        <div class="col-12">
                             Join one of the world’s top XR studios and help shape the future of technology
                         </div>
                     </div>
@@ -273,45 +283,57 @@
         </div>
     </section>
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="row m-3 g-3">
             <div class="col-12 col-md-6">
-                <img src="../img/team1.jpg" class="img-fluid rounded mx-auto d-block" alt="IMG1">
+                <img src="../img/team1.jpg" class="img-fluid rounded-4 mx-auto d-block" alt="IMG1">
             </div>
             <div class="col-12 col-md-6">
-                <img src="../img/team2.jpg" class="img-fluid rounded mx-auto d-block" alt="IMG2">
+                <img src="../img/team2.jpg" class="img-fluid rounded-4 mx-auto d-block" alt="IMG2">
             </div>
             <div class="col-12 col-md-6">
-                <img src="../img/team3.jpg" class="img-fluid rounded mx-auto d-block" alt="IMG3">
+                <img src="../img/team3.jpg" class="img-fluid rounded-4 mx-auto d-block" alt="IMG3">
             </div>
             <div class="col-12 col-md-6">
-                <img src="../img/team4.jpg" class="img-fluid rounded mx-auto d-block" alt="IMG4">
+                <img src="../img/team4.jpg" class="img-fluid rounded-4 mx-auto d-block" alt="IMG4">
             </div>
         </div>
     </div>
 
     <div class="container bg-white my-3">
         <div class="row">
-            <div class="col-7 p-5">
-                <h2> Meet the founder</h2>
-                <h3> Pioneering the future of Spatial Computing</h3>
-                <p>Since 2016, Horacio has led Treeview from a garage VR studio into a globally recognized leader in the
-                    XR industry.</p>
-                <p>Driven by a passion for technology, innovation, history and philosophy, Horacio works to help shape
-                    the next technological and cultural revolution. He sees spatial computing as the ultimate bridge
-                    between humanity and technology.</p>
-                <div class="container d-flex justify-content-start p-5">
-                    <button type="button" class="btn btn-outline-primary"> LinkedIn</button>
+            <div class="col-md-7 p-5 tipoDeFuente">
+                <h1 class="tituloS"> Meet the founder</h2>
+                    <p class="tituloSP"> <b>Pioneering the future of Spatial Computing</b> </p>
+                    <p class="tituloP">
+                        Since 2016, Horacio has led Treeview from a garage VR studio into a globally recognized leader
+                        in the
+                        XR industry.
+                        <br>
+                        <br>
+                        Driven by a passion for technology, innovation, history and philosophy, Horacio works to help
+                        shape
+                        the next technological and cultural revolution. He sees spatial computing as the ultimate bridge
+                        between humanity and technology.
+                    </p>
+                    <div class="container d-flex justify-content-start py-5">
+                        <button type="button" class="btn btn-outline-primary">
+                            <i class="bi bi-linkedin"></i>
+                            LinkedIn
+                        </button>
+                    </div>
+            </div>
+            <div class="col-md-5 py-5 d-flex align-items-center">
+                <div>
+                    <img src="../img/CEO.jpg" class="img-fluid rounded mx-auto d-block" alt="IMG2">
                 </div>
             </div>
-            <div class="col-5 py-5">
-                <img src="../img/CEO.jpg" class="img-fluid rounded mx-auto d-block" alt="IMG2">
-            </div>
         </div>
+        
     </div>
 
     <!-- seccion de contacto -->
-    <section class="container-fluid bg-dark text-light py-5">
+    <section class="container-fluid bg-dark text-light py-5 my-5">
         <div class="row justify-content-center align-items-center">
 
             <!-- Columna izquierda: Formulario -->
@@ -362,7 +384,7 @@
 
 
     <section class="container-fluid m-3">
-        <div class="row">            
+        <div class="row">
             <div class="col-4 d-flex align-items-start flex-column mt-5 justify-content-center">
                 <h4>Social</h4>
                 <button type="submit" class="btn btn-outline-primary">LinkedIn</button>
